<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity"
    android:layout_margin="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:id="@+id/img_image_detail"
            android:layout_centerHorizontal="true"
            />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:id="@+id/btn_toggle_favorite"
            android:textSize="11sp"
            android:layout_margin="10dp"
            android:background="#00E02626"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/img_image_detail"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_judul_detail"
            android:layout_marginTop="13dp"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textAlignment="center"
            android:layout_below="@+id/btn_toggle_favorite"
            />

        <TextView
            android:id="@+id/tv_rating_detail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_judul_detail"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/tv_vote_detail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_below="@id/tv_judul_detail"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/rating"
            android:text="@string/rating"
            android:textAlignment="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/tv_rating_detail"
            />
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/vote"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="25dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_vote_detail"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release"
            android:id="@+id/release"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/rating"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rilis_detail"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_below="@id/release"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/deskripsi"
            android:layout_below="@+id/tv_rilis_detail"
            android:layout_marginTop="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_deskripsi_detail"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:layout_below="@id/deskripsi"
            />
    </RelativeLayout>

</ScrollView>